View Issue Details

IDProjectCategoryView StatusLast Update
0022995Open CASCADEOCCT:Application Frameworkpublic2012-03-29 17:26
Reportervro Assigned Tobugmaster  
PrioritylowSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2005 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022995: It is not possible to check presence of a document in OCAF session via IsInSession() on Windows
DescriptionA method TDocStd_Application::IsInSession() uses a combination of '\' and '/' slashes on Windows. Therefore, it is not possible to find out whether a document is in session or not (because an input path contains only one type of slashes).
Steps To Reproduce1. Open a document in an OCAF application
2. Call IsInSession() using the document path -> it returns 0, which means that the document is not in the session.
TagsNo tags attached.
Test case numberchl 934 T2

Attached Files

  • T2 (1,015 bytes)

Activities

vro

2012-02-16 12:03

developer   ~0019592

Dear Sergey,
Could you please revise the fix?

A fix is put to http://svn/svn/occt/branches/22995. The only modified file is TDocStd_Application.cxx. Look please at the method IsInSession().

Thanks,
Vlad

vro

2012-02-16 12:05

developer   ~0019593

A draw-command is IsInSession.

szy

2012-02-17 17:36

manager   ~0019645

Reviewed. TDocStd_Application.cxx is Ok.

apn

2012-02-20 10:24

administrator   ~0019656

Last edited: 2012-02-20 16:16

Dear BugMaster,
 Workbench KAS:dev:apn-22995-occt was created from SVN branch http://svn/svn/occt/branches/22995
 (and apn-22995-products from trunk) and compiled on Windows and Linux platforms.
 
 There are not regressions in apn-22995-products regarding to KAS:dev:products-20120210-opt

 Test case for this fix is chl 934 T2. It's OK on Linux and on WNT.
  
 See results in /QADisk/occttests/results/KAS/dev/ apn-22995-products_17022012/lin
 See reference results in /QADisk/occttests/results/KAS/dev/products-20120210-opt_10022012/lin
 See test cases in /QADisk/occttests/tests/ED

apn

2012-02-20 16:15

administrator  

T2 (1,015 bytes)

bugmaster

2012-02-22 11:39

administrator   ~0019719

Integrated into trunk of occt repository

Date: 2012-02-22 11:38:15 +0400 (Wed, 22 Feb 2012)
New Revision: 10580

Modified:
   trunk/src/TDocStd/TDocStd_Application.cxx

Related Changesets

occt: master bcb0fd43

2012-02-22 07:38:15

vro


Committer: bugmaster Details Diff
0022995: It is not possible to check presence of a document in OCAF session via IsInSession() on Windows Affected Issues
0022995
mod - src/TDocStd/TDocStd_Application.cxx Diff File

Issue History

Date Modified Username Field Change
2012-02-16 11:46 vro New Issue
2012-02-16 11:46 vro Assigned To => vro
2012-02-16 12:03 vro Note Added: 0019592
2012-02-16 12:03 vro Assigned To vro => szy
2012-02-16 12:03 vro Status new => resolved
2012-02-16 12:05 vro Note Added: 0019593
2012-02-17 17:36 szy Note Added: 0019645
2012-02-17 17:36 szy Status resolved => reviewed
2012-02-17 18:42 mkv Assigned To szy => apn
2012-02-20 10:24 apn Note Added: 0019656
2012-02-20 16:15 apn File Added: T2
2012-02-20 16:16 apn Note Edited: 0019656
2012-02-20 16:18 apn Test case number => chl 934 T2
2012-02-20 16:19 apn Status reviewed => tested
2012-02-20 17:26 apn Assigned To apn => bugmaster
2012-02-22 11:39 bugmaster Note Added: 0019719
2012-02-22 11:39 bugmaster Status tested => verified
2012-02-22 11:39 bugmaster Resolution open => fixed
2012-02-22 11:39 bugmaster Assigned To bugmaster => vro
2012-03-14 12:31 bugmaster Project Internal => Open CASCADE
2012-03-29 17:26 bugmaster Changeset attached => occt master bcb0fd43