0022995: It is not possible to check presence of a document in OCAF session via IsInSession() on Windows